Added config option to not encrypt your refresh tokens